# chokaku

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  package.xml
config/: chokaku_config.json
include/chokaku/: chokaku.hpp
include/chokaku/inference/: chokaku_inference.hpp
include/chokaku/node/: chokaku_node.hpp
include/chokaku/utils/: audio_capture.hpp  audio_processing.hpp  config.hpp  prediction.hpp
src/chokaku/: chokaku.cpp  chokaku_check.cpp  chokaku_main.cpp
src/chokaku/inference/: chokaku_inference.cpp
src/chokaku/node/: chokaku_node.cpp
src/chokaku/utils/: audio_capture.cpp  audio_processing.cpp  config.cpp  prediction.cpp
test/: chokaku_test.cpp
